Change launch icon and app_name

--- a/Bluetooth_faster_connection/res/values/strings.xml
+++ b/Bluetooth_faster_connection/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name">Keep Scanning</string>
+    <string name="app_name">Guide Dog</string>
 
     <!--  BluetoothChat -->
     <string name="send">Send</string>
